feat: embedding function work in progress
