# backend/main.go
@@ -1,10 +1,10 @@
 package main
 
 import (
-    "github.com/gin-gonic/gin"
-    swaggerFiles "github.com/swaggo/files"
-    ginSwagger "github.com/swaggo/gin-swagger"
-    docs "github.com/Nerggg/Audio-Steganography-LSB/backend/docs"
+   "github.com/gin-gonic/gin"
+   swaggerFiles "github.com/swaggo/files"
+   ginSwagger "github.com/swaggo/gin-swagger"
+   docs "github.com/Nerggg/Audio-Steganography-LSB/backend/docs"
    "github.com/Nerggg/Audio-Steganography-LSB/backend/service"
 )
 
@@ -16,8 +16,9 @@ func main()  {
    v1 := r.Group("/api/v1")
    {
       v1.POST("/api/capacity",service.CalculateCapacityHandler)
+      v1.POST("/api/embed",service.EmbedHandler)
    }
    r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-   r.Run(":8080")
+   r.Run(":8085")
 
 }
