# backend/models/capacity.go
@@ -1,0 +1,8 @@
+package models
+
+type CapacityResult struct {
+    OneLSB   int `json:"1_lsb"`
+    TwoLSB   int `json:"2_lsb"`
+    ThreeLSB int `json:"3_lsb"`
+    FourLSB  int `json:"4_lsb"`
+}
